--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -47,6 +47,12 @@
           <th>Height:</th>
           <td id='height'></td>
         </tr>
+        
+        <tr>
+          <th>Weight:</th>
+          <td id='weight'></td>
+        </tr>
+        
         <tr>
           <th>Systolic Blood Pressure:</th>
           <td id='systolicbp'></td>
